fix: change argsto to prevent release plugin from failing